fix: bug in windows

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@
 # Add the requirements you need to this file.
 # or run `make init` to create this file automatically based on the template.
 # You can also run `make switch-to-poetry` to use the poetry package manager.
-httpx[socks]
+httpx
+httpx-socks[asyncio]
+
 requests
 jinja2
