fix: bug that only test 10 servers

--- a/server_config.json
+++ b/server_config.json
@@ -20,7 +20,7 @@
                 "network": "tcp",
                 "security": "reality",
                 "realitySettings": {
-                    "dest": "www.google.com:443", 
+                    "dest": "www.yahoo.com:443", 
                     "serverNames": [],
                     "privateKey": "2KZ4uouMKgI8nR-LDJNP1_MHisCJOmKGj9jUjZLncVU", 
                     "shortIds": [ "6ba85179e30d4fc2"]
